--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-googletrans==3.1.0a0
-tabulate==0.9.0
-pandas==2.2.0
+Faker==19.6.2
+matplotlib==3.8.0
 pip-autoremove==0.10.0
+pandas==2.1.1
+PySide2==5.15.2.1
+openpyxl==3.1.2
